# cbsmodel

./: AUTHORS  BUILD  CMakeLists.txt  Makefile.am  README  autogen.sh  changelog  changelog.Debian  configure.ac  makefile  mkDeb.sh
cmake/: FindReadline.cmake
debian/DEBIAN/: control
debian/usr/share/doc/cbsmodel/: copyright
doc/: cbsmodel.1  manual.tex
examples/: 154Sm.ET
include/: CBSNucleus.hpp
src/: CBSNucleus.cpp  CBSNucleus.hpp  Main.cpp  Makefile.am  fit.hpp
